--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ font-size:2em;
   position: relative;
   top: -5px;
   cursor: pointer;
+}
+.browse-size div:hover{
+  color: #83B735;
+}
+.green:hover{
+  background-color: #83B735;
 
 }
-
